# rocket-posgtres-todo

./: Cargo.toml  README.md  Rocket.toml
migrations/2022-07-05-105104_create_todo_table/: down.sql  up.sql
src/: main.rs  schema.rs
