[package]
name = "rocket-postgres-todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
serde = "1.0"
diesel = { version = "1.4.4", features = ["postgres"] }

[dependencies.serde_derive]
version = "1.0"


[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["json", "diesel_postgres_pool"]




