[package]
name = "rocket-postgres-todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json"]}
serde = {version ="1.0", features = ["derive"]}
diesel = { version = "1.4.4", features = ["postgres"] }



[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.2"
default-features = false
features = [ "diesel_postgres_pool"]




